<resources>
    <string name="app_name">VOICE MEMO</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- bottom item name -->
    <string name="bottom_voice_memo">音声メモ</string>
    <string name="bottom_list">リスト</string>
    <string name="bottom_delete">ゴミ箱</string>
    <string name="bottom_edit">編集画面</string>

    <!-- button name -->
    <string name="button_save">保存</string>
    <string name="button_clear">クリア</string>
    <string name="button_voice_memo">VOICE MEMO</string>
    <string name="button_cancel">キャンセル</string>

</resources>
